@@ -101,7 +101,7 @@ Consts.34=Europe/USA
 Consts.36=Europe/USA/Japan
 Consts.38=USA/Japan
 Consts.40=Australia
-Consts.42=Notrh Korea
+Consts.42=North Korea
 Consts.44=Brazil
 Consts.46=South Korea
 Consts.48=Europe/Brazil
@@ -113,7 +113,7 @@ Consts.75=French
 Consts.76=English
 Consts.77=Chinese
 Consts.78=Danish
-Consts.79=Hollandish
+Consts.79=Dutch
 Consts.80=Finish
 Consts.81=Deutsch
 Consts.82=Italian
@@ -187,7 +187,7 @@ MainWindow.9=Rename
 MainWindow.10=Clean up
 MainWindow.14=Compress
 GameListTableModel.3=Title
-ShowAboutAction.2=\nDelopped by Pierre Chastagner\n\nThanks to t4ils for his support :)\nGerman translation : IsSuE_\n\nGo to http://code.google.com/p/rofage/ for :\n- Getting the latest version,\n- Report a bug,\n- Ask for a new feature\n- or consult/contribute to the wiki\n\nUses librairies\n- jDOM (http://www.jdom.org/)\n- TrueZip (https://truezip.dev.java.net/)
+ShowAboutAction.2=\nDelopped by Pierre Chastagner\n\nThanks to t4ils for his support :)\nGerman translation : IsSuE_\nDutch translation: Maikel Steneker\n\nGo to http://code.google.com/p/rofage/ for :\n- Getting the latest version,\n- Report a bug,\n- Ask for a new feature\n- or consult/contribute to the wiki\n\nUses librairies\n- jDOM (http://www.jdom.org/)\n- TrueZip (https://truezip.dev.java.net/)
 GameListSelectionListener.3=Release : 
 GameListSelectionListener.5=Rom size : 
 GameListSelectionListener.2=CRC : 
