@@ -185,7 +185,7 @@ MainWindow.10=S\u00E4ubern
 MainWindow.11=Franz\u00F6sisch
 MainWindow.14=Komprimieren
 GameListTableModel.3=Titel
-ShowAboutAction.2=\nDelopped by Pierre Chastagner\n\nThanks to t4ils for his support :)\nGerman translation : IsSuE_\n\nGo to http://code.google.com/p/rofage/ for :\n- Getting the latest version,\n- Report a bug,\n- Ask for a new feature\n- or consult/contribute to the wiki\n\nUses librairies\n- jDOM (http://www.jdom.org/)\n- TrueZip (https://truezip.dev.java.net/)
+ShowAboutAction.2=\nDelopped by Pierre Chastagner\n\nThanks to t4ils for his support :)\nGerman translation : IsSuE_\nDutch translation : Maikel Steneker\n\nGo to http://code.google.com/p/rofage/ for :\n- Getting the latest version,\n- Report a bug,\n- Ask for a new feature\n- or consult/contribute to the wiki\n\nUses librairies\n- jDOM (http://www.jdom.org/)\n- TrueZip (https://truezip.dev.java.net/)
 GameListSelectionListener.3=Release : 
 GameListSelectionListener.5=Rom Gr\u00F6\u00DFe : 
 GameListSelectionListener.2=CRC : 
